--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ form label {
     display: flex;
     gap: 20px;
     margin-top: 10px;
+    flex-wrap: wrap;
 }
 
 /* Hide the default radio button */
@@ -143,7 +144,7 @@ form label {
 
 
 /* Responsive styles for smaller screens */
-@media (max-width: 768px) {
+@media (max-width: 480px) {
     body {
         padding: 5px;
     }
@@ -168,15 +169,20 @@ form input:hover, form textarea:hover, form select:hover {
     border-color: #999; /* Slightly darken the border on hover */
 }
 
-@media (min-width: 768px) {
+@media (min-width: 480px) {
     .radio-group {
-        flex-direction: row;} /* Ensure buttons align horizontally even on smaller screens */
+        flex-direction: column;
+        gap: 10px;} /* Ensure buttons align horizontally even on smaller screens */
     form {
         max-width: 600px;
         margin: 0 auto; /* Center the form */
     }
     form input[type="radio"] {
         transform: scale(1); /* Keep radio button size normal on smaller screens */
+    }
+    .ped-status-radio label {
+        padding-left: 25px; /* Reduce padding */
+        font-size: 14px; /* Reduce font size */
     }
 }
 
